#############################################################################
# Name:        samples/minimal/CMakeListst.txt
# Purpose:     Sample CMake file to show usage of cmake for wxWidgets users
# Author:      Tobias Taschner
# Created:     2016-10-23
# Copyright:   (c) 2016 wxWidgets development team
# Licence:     wxWindows licence
#############################################################################

#
# This file is just a sample to show using cmake from an application
# If you want to build the minimal and other samples please use the
# wxBUILD_SAMPLES option when using cmake on the library
#

# Declare the minimum required CMake version
cmake_minimum_required(VERSION 2.8.12)

if(APPLE AND NOT CMAKE_OSX_DEPLOYMENT_TARGET)
    # If no deployment target has been set default to the minimum supported
    # OS version (this has to be set before the first project() call)
    if(CMAKE_SYSTEM_NAME STREQUAL "iOS")
        set(CMAKE_OSX_DEPLOYMENT_TARGET 12.0 CACHE STRING "iOS Deployment Target")
    else()
        set(CMAKE_OSX_DEPLOYMENT_TARGET 10.10 CACHE STRING "macOS Deployment Target")
    endif()
endif()

# Name the project
project(pdm)

# Request the required wxWidgets libs
find_package(wxWidgets 3.0 COMPONENTS REQUIRED richtext html net xml core base)

# Include the wxWidgets use file to initialize various settings
include(${wxWidgets_USE_FILE})
set(CMAKE_CXX_STANDARD 20)
#set(wxWidgets_ROOT_DIR <C:/Users/18604/Downloads/wxWidgets-3.1.5>)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -O2 -D WINDOWS -D LINUX -pthread")

# Define a variable containing a list of source files for the project
set(SRC_FILES
        auth.cpp pdm-service.hpp  cApp.cpp  cMain.cpp pdmFile.cpp
        Tree_Ctrl.cpp Tree_Ctrl.h)

if(WIN32)
    # Include a RC file for windows
    list(APPEND SRC_FILES ../sample.rc)
elseif(APPLE)
    # Add an icon for the apple .app file
    list(APPEND SRC_FILES ./logonight.icns)
endif()

# Define the build target for the executable
add_executable(${PROJECT_NAME} WIN32 MACOSX_BUNDLE ${SRC_FILES})
# Link required libraries to the executable
target_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES})

if(APPLE)
    set_target_properties(${PROJECT_NAME} PROPERTIES
        RESOURCE ".logonight.icns"
        MACOSX_BUNDLE_ICON_FILE logonight.icns
        MACOSX_BUNDLE_COPYRIGHT "Copyright Yang Yi"
        MACOSX_BUNDLE_GUI_IDENTIFIER "org.wxwidgets.pdm"
        )
endif()
